# shellcraft

./: .gitignore  .travis.yml  404.html  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  Shellcraft.code-workspace  Shellcraft.sublime-project  Shellcraft.sublime-workspace  conf.py  index.html  mise.toml  mkdocs.yml  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
72letters/: index.html
_build/doctrees/: environment.pickle  fractions.doctree  index.doctree  installation.doctree  nomenclature.doctree
_build/html/: fractions.html  genindex.html  index.html  installation.html  nomenclature.html  objects.inv  search.html  searchindex.js
_build/html/_sources/: index.rst.txt  nomenclature.rst.txt
art/: logo.sketch  names.sketch
cli/: index.html
dev/: index.html
docs/: 72letters.md  Makefile  cli.md  conf.py  dev.md  fractions.md  fractions.rst  index.md  index.rst  installation.md  installation.rst  nomenclature.md  nomenclature.rst  usage.rst
fractions/: index.html
img/: names.html
installation/: index.html
nomenclature/: index.html
search/: search_index.json
src/shellcraft/: __init__.py  _cli_impl.py  _colors.py  automata.py  cli.py  core.py  epithets.py  events.py  exceptions.py  fractions.py  game_state.py  game_state_pb2.py  grammar.py  items.py  missions.py  research.py  research.yaml  shellcraft.py  tools.py  tutorial.py  tutorials.yaml  utils.py  world.py
src/shellcraft/data/: events.toml  events.yaml  fractions.toml  fractions.yaml  game_state.proto  guild_names.grammar  items.yaml  letter.grammar  missions.toml  missions.yaml  names.grammar  research.toml  research.yaml  tools.toml  tools.yaml  tutorials.toml  tutorials.yaml
tests/: conftest.py  test_catalog.py  test_cli.py  test_crafting.py  test_effects.py  test_migration.py  test_mining.py  test_missions.py  test_research.py  test_shellcraft.py  test_tools_repr.py  test_tutorial.py  test_utils.py  test_world.py
tests/fixtures/: mover.automaton  save1.json  test.json
