[tool.poetry]
name = "shellcraft"
version = "0.12.0"
description = "ShellCraft is a command line based crafting game."
authors = ["Manuel Ebert <manuel@1450.me>"]
license = "MIT"
readme = "README.md"
homepage = "https://maebert.github.io/shellcraft"
repository = "https://github.com/maebert/shellcraft"
include = ["src/*.toml", "src/*.grammar", "src/*.proto"]

[tool.poetry.urls]
Changelog = "https://github.com/maebert/shellcraft/releases"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
protobuf = "^3.8"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
mkdocs = "^1.1"
pytest = "^6.1.2"
flake8 = "^3.8.4"
black = "^20.8b1"
vprof = "^0.38"
pylint = "^2.6.0"

[tool.poetry.scripts]
shellcraft = 'shellcraft.cli:main'

[tool.flake8]
exclude = ["docs", "*pb2.py"]
ignore = ["E501", "E741"]

[build-system]
requires = ["poetry>=1.0.10"]
build-backend = "poetry.masonry.api"
