[project]
name = "shellcraft"
version = "0.13.0"
description = "ShellCraft is a command line based crafting game."
authors = [
  {name = "Manu Ebert", email = "manuel@1450.me"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8",
    "pydantic>=2.11.9",
    "toml>=0.10.2",
]

[project.urls]
Homepage = "https://maebert.github.io/shellcraft"
Documentation = "https://maebert.github.io/shellcraft"
Repository = "https://github.com/maebert/shellcraft"


[project.scripts]
shellcraft = 'shellcraft.cli:main'

[tool.uv]
package = true
