[project]
name = "shellcraft"
version = "0.14.0"
description = "ShellCraft is a command line based crafting game."
authors = [{ name = "Manu Ebert", email = "manuel@1450.me" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["click>=8.1.8", "pydantic>=2.11.9", "toml>=0.10.2"]

[project.urls]
Homepage = "https://maebert.github.io/shellcraft"
Documentation = "https://maebert.github.io/shellcraft"
Repository = "https://github.com/maebert/shellcraft"


[project.scripts]
shellcraft = 'shellcraft.cli:main'

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "coverage>=7", "ty"]

[tool.uv]
package = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W"]
# E501 (line too long) — black-compatible formatter handles long lines best-effort.
# E741 (ambiguous variable name) — pre-existing `l` usage in CLI rendering code.
ignore = ["E501", "E741"]
