[bumpversion]
current_version = 0.10.3
commit = False
allow_dirty = True
tag = False

[bumpversion:file:src/shellcraft/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs, *pb2.py
ignore = E501

[metadata]
description-file = README.rst

